# Limequick

./: README.md  TemplateLime.docx  pyproject.toml  write.py
src/: app.py  write.py
src/static/: result.docx
src/templates/: index.html
